--- a/conf/origin/conf/index.html
+++ b/conf/origin/conf/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
-    <title>LLNMP一键安装包 by Shuang.Ca</title>
+    <title>LLNMP一键安装包 by djamol.com</title>
     <style>
     * {margin:0;padding:0;}
     header {text-align:center;margin-top:20px;}
@@ -26,13 +26,13 @@
                 <li>当您看到此页面时，表示您的LLNMP中的LLMP已经成功安装了。</li>
                 <li>查看本地环境：<a href="http://{ip}/p.php" title="探针" target="_blank">探针</a>&nbsp;<a href="http://{ip}/p.php?act=phpinfo" title="phpinfo" target="_blank">phpinfo</a>{cache}{redis}{memcached}</li>
                 <li>网站功能管理：{ftp}<a href="http://{ip}/phpmyadmin" title="phpMyAdmin" target="_blank">phpMyAdmin</a>&nbsp;<a href="http://{ip}:7080/" title="Litespeed控制面板" target="_blank">Litespeed控制面板</a></li>
-                <li>LLNMP发布页：<a href="http://shuang.ca/llnmp" title="LLNMP" target="_blank">http://shuang.ca/llnmp</a></li>
+                <li>LLNMP发布页：<a href="http://djamol.com/llnmp" title="LLNMP" target="_blank">http://djamol.com/llnmp</a></li>
             </ul>
         </li>
     </ul>
 </section>
 <footer>
-    <p>Copyright &copy;2013 <a href="http://shuang.ca/llnmp" title="LLNMP一键安装包" target="_blank">LLNMP一键安装包</a> Powered by <a href="http://shuang.ca/" title="双擦" target="_blank">Shuang.Ca</a></p>
+    <p>Copyright &copy;2013 <a href="http://djamol.com/llnmp" title="LLNMP一键安装包" target="_blank">LLNMP一键安装包</a> Powered by <a href="http://djamol.com/" title="双擦" target="_blank">djamol.com</a></p>
 </footer>
 </body>
 </html>
